--- a/diff/.git-rc
+++ b/diff/.git-rc
@@ -9,6 +9,9 @@ alias gda="g da"
 alias gdas="g das"
 alias gdb="g db"
 alias gdbr="g dbr"
+alias gdf="g df"
+alias gdfm="g dfm"
+alias gddf="g ddf"
 alias gdft="g dft"
 alias gdc="g dc"
 alias gdcp="g dcp"
