--- a/ls/.git-rc
+++ b/ls/.git-rc
@@ -47,3 +47,9 @@ alias gbrm="g brm"
 
 alias gtfi="g tfi"
 alias gti="g ti"
+
+alias gsz="g sz"
+alias gszh="g szh"
+alias gszs="g szs"
+alias gts="g ts"
+alias gtsz="g tsz"
