--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -26,6 +26,7 @@ alias grbs="g rbs"
 
 alias grc="g rc"
 alias gri="g ri"
+alias grir="g rir"
 alias grim="g rim"
 alias grq="g rq"
 alias grx="g rx"
