--- a/submodule/.git-rc
+++ b/submodule/.git-rc
@@ -36,6 +36,7 @@ alias gsmu="g smu"
 alias gsmuf="g smuf"
 alias gsmuq="g smuq"
 alias gsmur="g smur"
+alias gsmurf="g smurf"
 alias gsmurq="g smurq"
 alias gsmurr="g smurr"
 alias gsmus="g smus"
