--- a/submodule/.git-rc
+++ b/submodule/.git-rc
@@ -1,4 +1,5 @@
 alias gps="g ps"
+alias grhsl="g rhsl"
 alias gsac="g sac"
 alias gsaca="g saca"
 alias gsmac="g smac"
@@ -55,3 +56,4 @@ alias gsmlp="g smlp"
 alias gism="g ism"
 alias gis="g is"
 alias gftd="g ftd"
+alias gsrc="g src"
