--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -16,7 +16,9 @@ alias gcn="g cn"
 alias gcne="g cne"
 alias gcnm="g cnm"
 alias gcam="g cam"
+alias gcan="g can"
 alias gcane="g cane"
+alias gcaan="g caan"
 alias gcaane="g caane"
 
 alias gcap="g cap"
