branch, checkout, rebase helpers

--- a/branch/.git-rc
+++ b/branch/.git-rc
@@ -39,3 +39,8 @@ alias gbk="g bk"
 alias gpb="g pb"
 
 alias gbe="g be"
+alias grbb="g rbb"
+
+alias gtb="g tb"
+alias gub="g ub"
+alias gbru="g bru"
