--- a/checkout/.git-rc
+++ b/checkout/.git-rc
@@ -4,7 +4,8 @@ alias gco="g co"
 alias gcob="g cob"
 alias gcof="g cof"
 alias gcoh="g coh"
-alias gcom="gco master"
+alias gcom="g com"
+alias gcon="g con"
 alias gcop="g cop"
 alias gcor="g cor"
 alias gcorf="g corf"
