--- a/diff/.git-rc
+++ b/diff/.git-rc
@@ -16,6 +16,8 @@ alias gdft="g dft"
 alias gdc="g dc"
 alias gdcp="g dcp"
 alias gdcss="g dcss"
+alias gdg="g dg"
+alias gdgif="g dgif"
 alias gdh="g diff HEAD"
 alias gdn="g dn"
 alias gdno="g dno"
