--- a/diff/.gitconfig
+++ b/diff/.gitconfig
@@ -18,6 +18,8 @@
   dcss = diff --cached --submodule=short
   df   = diff-filter
   dfm  = diff-filter M
+  dg   = diff-gif.py
+  dgif = diff-git.py
   ddf  = diff-filter
   dft  = difftool
   dh   = diff HEAD
