aliases, gif diffs

--- a/diff/.git-rc
+++ b/diff/.git-rc
@@ -19,6 +19,9 @@ alias gdcss="g dcss"
 alias gdg="g dg"
 alias gdgif="g dgif"
 alias gdh="g diff HEAD"
+alias gdh1="g dh1"
+alias gdh2="g dh2"
+alias gdj="g dj"
 alias gdn="g dn"
 alias gdno="g dno"
 alias gdns="g dns"
