--- a/github/.git-rc
+++ b/github/.git-rc
@@ -13,3 +13,4 @@ defn hdss github-docs-snapshot -s
 defn ghh "$(which gh)"
 defn gha "ghh api"
 defn ghj 'ghh api -H "Accept: application/vnd.github+json"'
+defn ghw github-workflows.py
