--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -42,3 +42,8 @@ alias gshoh="g shoh"
 alias gshrh="g shrh"
 alias gshrm="g shrm"
 alias gsqsq="g sqsq"
+
+alias gtw="g tw"
+alias gtwa="g twa"
+alias gtwp="g twp"
+alias gtwap="g twap"
