--- a/config/.git-rc
+++ b/config/.git-rc
@@ -8,7 +8,9 @@ alias gcgd="g cgd"
 alias gcfi="g cfi"
 alias gcgi="g cgi"
 alias gcfig="g cfig"
+alias gcfef="g cfef"
 alias gcgig="g cgig"
+alias gcgef="g cgef"
 alias gcfis="g cfis"
 alias gcgis="g cgis"
 alias gcfia="g cfia"
