--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -4,7 +4,9 @@ alias gacm="g acm"
 alias gafp="g afp"
 alias gaafp="g aafp"
 alias gapf="g apf"
+alias gapfu="g apfu"
 alias gaapf="g aapf"
+alias gaapfu="g aapfu"
 alias gc="g c"
 alias gca="g ca"
 alias gcam="g cam"
