--- a/ls/.gitconfig
+++ b/ls/.gitconfig
@@ -1,8 +1,11 @@
 [alias]
   l       = ls-files
   ls      = ls-files
+  lz      = ls-files -z
   lr      = ls-files --recurse-submodules
   lo      = ls-files --other --exclude-standard --directory --no-empty-directory
+  lzo     = ls-files --other --exclude-standard --directory --no-empty-directory -z
+  loz     = ls-files --other --exclude-standard --directory --no-empty-directory -z
   lso     = ls-files --other --exclude-standard --directory --no-empty-directory
 
   lt = ls-tree
