add helpers, local-branch-list, remote-branch-exists, parents

--- a/add/.git-rc
+++ b/add/.git-rc
@@ -8,6 +8,7 @@ alias gap="g ap"
 alias gap.="g ap ."
 alias gdma="g dma"
 alias gau="g au"
+alias gauf="g auf"
 alias gau.="g au ."
 alias gaup="g aup"
 alias gapu="g apu"
