git-mount-branch helper, reverse-chron sort local-branch-shas

--- a/branch/.git-rc
+++ b/branch/.git-rc
@@ -37,6 +37,8 @@ alias glbs="g lbs"
 alias gbls="g bls"
 alias glbl="g lbl"
 
+alias gmtb="g mtb"
+
 alias gab="g ab"
 alias gbk="g bk"
 alias gpb="g pb"
