--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -11,8 +11,10 @@ alias gdth="g dth"
 alias gdthc="g dthc"
 
 alias gpr="g pr"
+alias gmh="g mh"
 
 alias grb="g rb"
+alias grbd="g rbd"
 alias grd="g rd"
 alias grba="g rba"
 alias grbc="g rbc"
@@ -38,6 +40,7 @@ alias goc="g oc"
 alias goh="g oh"
 alias grhm="g rhm"
 alias gshoc="g shoc"
+alias gshmh="g shmh"
 alias gshoh="g shoh"
 alias gshrh="g shrh"
 alias gshrm="g shrm"
