--- a/.git-rc
+++ b/.git-rc
@@ -64,6 +64,7 @@ append_subdir_to_path \
   cat-file checkout check-ignore cherry-pick clone commit conflicts \
   describe diff \
   fetch \
+  git-filter-repo \
   gist github graph grep \
   help \
   lfs log ls \
