--- a/rev-list/.git-rc
+++ b/rev-list/.git-rc
@@ -5,6 +5,8 @@ alias gah="g ah"
 alias grla="g rla"
 alias grlc="g rlc"
 alias grvl="g rvl"
+alias grlp="g rlp"
+alias grlp1="g rlp1"
 alias grlfp="g rlfp"
 alias grvp="g rvp"
 alias gpts="g pts"
