commit --allow-empty helpers

--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -9,6 +9,8 @@ alias gaapf="g aapf"
 alias gaapfu="g aapfu"
 alias gc="g c"
 alias gca="g ca"
+alias gcae="g cae"
+alias gcaem="g caem"
 alias gcam="g cam"
 alias gcaam="g caam"
 alias gcbn="g cbn"
