--- a/push/.git-rc
+++ b/push/.git-rc
@@ -2,7 +2,9 @@
 alias gp="g p"
 alias gpd="g pd"
 alias gpf="g pf"
+alias gptf="g ptf"
 alias gpfo="g pfo"
+alias gpft="g pft"
 alias gpfu="g pfu"
 alias gph="g ph"
 alias gpm="g pm"
