--- a/push/.gitconfig
+++ b/push/.gitconfig
@@ -13,6 +13,8 @@
   pn = push -n
   pnt = push -n --tags
   pt = push --tags
+  ptf = push --tags -f
+  pft = push -f --tags
   ptn = push --tags -n
   pon = push -n origin
   pno = push -n origin
