diff --name-only, ls-tree helpers

--- a/diff/.git-rc
+++ b/diff/.git-rc
@@ -24,6 +24,8 @@ alias gdh2="g dh2"
 alias gdj="g dj"
 alias gdn="g dn"
 alias gdno="g dno"
+alias gdcno="g dcno"
+alias gdnoc="g dnoc"
 alias gdns="g dns"
 alias gdp="g dp"
 alias gdph="g dph"
