--- a/ls/.git-rc
+++ b/ls/.git-rc
@@ -10,6 +10,8 @@ alias glthr="g lthr"
 alias glthn="g lthn"
 alias gltr="g ltr"
 alias gltrn="g ltrn"
+alias glts="g lts"
+alias gltsh="g ltsh"
 alias glz="g lz"
 
 alias gfn="g fn"
