--- a/remote/.gitconfig
+++ b/remote/.gitconfig
@@ -40,6 +40,7 @@
   rsha      = remote-set-head-auto
 
   gru       = remote-get-url
+  gu        = remote-get-url
   rgu       = remote-get-url
   sru       = remote-set-url
   rsu       = remote-set-url
