--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -27,7 +27,8 @@
         cgu  = config --unset --global
         cfua = config --unset-all
         cgua = config --unset-all --global
-
+        set-default-branch-main = config --global init.defaultBranch main
+        sdbm = set-default-branch-main
         cfi = config --get-all include.path
         cgi = config --get-all --global include.path
         global-config-file = config --get-all --global include.path
