--- a/diff/.git-rc
+++ b/diff/.git-rc
@@ -47,7 +47,9 @@ alias gdw="g dw"
 alias ghc="g hc"
 alias ghnc="g hnc"
 alias gic="g ic"
+alias gicc="g icc"
 alias gid="g id"
+alias gidc="g idc"
 
 alias gnd="gn diff"
 alias gndc="gn diff --cached"
