--- a/fetch/.git-rc
+++ b/fetch/.git-rc
@@ -6,6 +6,7 @@ alias gft="g ft"
 alias gfa="g fa"
 alias gfta="g fta"
 alias gfo="g fo"
+alias gfpr="g fpr"
 alias gfu="g fu"
 alias gfr="g fr"
 alias gfro="g fro"
