--- a/graph/.git-rc
+++ b/graph/.git-rc
@@ -5,6 +5,7 @@ alias gga="g ga"
 alias ggg="g gg"
 alias ggp="g gp"
 alias ggr="g gr"
+alias ggra="g gra"
 alias gggc="g ggc"
 alias ggrd="g grd"
 alias ggrdh="g grdh"
