gtr=`ls-tree -r`

--- a/ls/.git-rc
+++ b/ls/.git-rc
@@ -10,6 +10,7 @@ alias glth="g lth"
 alias glthr="g lthr"
 alias glthn="g lthn"
 alias gltr="g ltr"
+alias gtr="g tr"
 alias gltrn="g ltrn"
 alias glts="g lts"
 alias gltsh="g ltsh"
