--- a/ls/.gitconfig
+++ b/ls/.gitconfig
@@ -13,6 +13,7 @@
   lthr = ls-tree -r HEAD
   lthn = ls-tree -r --name-only HEAD
   ltr = ls-tree -r
+  tr = ls-tree -r
   ltrn = ls-tree -r --name-only
   lts = ls-tree --abbrev
   ltsh = ls-tree --abbrev HEAD
