commit/tag aliases

--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -12,6 +12,8 @@ alias gca="g ca"
 alias gcae="g cae"
 alias gcaem="g caem"
 alias gcam="g cam"
+alias gcamt="g camt"
+alias gcamtf="g camtf"
 alias gcaam="g caam"
 alias gcbn="g cbn"
 alias gcbns="g cbns"
@@ -20,6 +22,8 @@ alias gcfns="g cfns"
 
 alias gcm="g cm"
 alias gcmp="g cmp"
+alias gcmt="g cmt"
+alias gcmtf="g cmtf"
 alias gcn="g cn"
 alias gcne="g cne"
 alias gcnm="g cnm"
