git-commit-tree-reset

--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -24,6 +24,8 @@ alias gcm="g cm"
 alias gcmp="g cmp"
 alias gcmt="g cmt"
 alias gcmtf="g cmtf"
+alias gcmtr="g cmtr"
+alias gcmtrr="g cmtrr"
 alias gcn="g cn"
 alias gcne="g cne"
 alias gcnm="g cnm"
@@ -43,6 +45,8 @@ alias gcpp="g cpp"
 alias gcppa="g cppa"
 alias gcppam="g cppam"
 alias gcppm="g cppm"
+alias gctr="g ctr"
+alias gctrr="g ctrr"
 
 alias gfua="g fua"
 
