--- a/conflicts/.gitconfig
+++ b/conflicts/.gitconfig
@@ -9,4 +9,4 @@
   cococ = conflicting-checkout-ours-and-continue
   coct = conflicting-checkout-theirs
   coctc = conflicting-checkout-theirs-and-continue
-  uu = conflicting
+  uu = !git --no-pager conflicting
