--- a/graph/.git-rc
+++ b/graph/.git-rc
@@ -2,6 +2,10 @@
 
 alias gg="g g"
 alias gga="g ga"
+alias ggaa="g gaa"
+alias ggaal="g gaal"
+alias ggal="g gal"
+alias ggala="g gala"
 alias ggg="g gg"
 alias ggp="g gp"
 alias ggr="g gr"
