--- a/bisect/.git-rc
+++ b/bisect/.git-rc
@@ -3,6 +3,7 @@
 alias gbs="g bs"
 alias gbsb="g bsb"
 alias gbsg="g bsg"
+alias gbsh="g bsh"
 alias gbsl="g bsl"
 alias gbsn="g bsn"
 alias gbrr="g brr"
