pub = push-user-branch

--- a/push/.git-rc
+++ b/push/.git-rc
@@ -15,6 +15,9 @@ alias gpo="g po"
 alias gpt="g pt"
 alias gptn="g ptn"
 alias gpu="g pu"
+alias gpub="g pub"
+alias gpubf="g pubf"
+alias gpubn="g pubn"
 alias gpx="g px"
 
 alias gput="g put"
