--- a/push/.gitconfig
+++ b/push/.gitconfig
@@ -27,6 +27,9 @@
   psu = push --set-upstream
   pto = push --tags origin
   pu = push-to-remote-branch upstream
+  pub = push-user-branch
+  pubf = push-user-branch -f
+  pubn = push-user-branch -n
   spf = safe-push-force
   spfo = safe-push-force origin
   spfu = safe-push-force upstream
