`rebase-merge-base`, `rebase-onto` helpers

--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -21,8 +21,10 @@ alias grbc="g rbc"
 alias grbh="g rbh"
 alias grbhm="g rbhm"
 alias grbm="g rbm"
-alias grbp="g rbp"
+alias grbmb="g rbmb"
 alias grbo="g rbo"
+alias grbot="g rbot"
+alias grbp="g rbp"
 alias rbo="g rbo"
 alias grbs="g rbs"
 
