--- a/rebase/.gitconfig
+++ b/rebase/.gitconfig
@@ -16,16 +16,18 @@
   rbhm    = rebase-head-message
   rebase-dag = rebase-dag.py
   rbd     = rebase-dag.py
+  rbm     = rebase-head-message
   rbmb    = rebase-merge-base
   rbo     = rebase --onto
   rbot    = rebase-onto
   rbp     = rebase-parent
-  rbm     = rebase-head-message
   rbs     = rebase --skip
+  rbud    = rebase-upstream-diff
   rc      = rebase --continue
   rd      = rebase-diff
   ri      = rebase -i
   rir     = rebase -i --root
+  rud     = rebase-upstream-diff
   rx      = rebase -i -x
   rhm     = rebase-head-message
   rim     = rebase -i master
