canea = commit --amend --no-edit --allow-empty --author

--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -32,6 +32,7 @@ alias gcnm="g cnm"
 alias gcam="g cam"
 alias gcan="g can"
 alias gcane="g cane"
+alias gcanea="g canea"
 alias gcaan="g caan"
 alias gcaane="g caane"
 
