`ctrs = commit-tree-reset`

--- a/commit/.gitconfig
+++ b/commit/.gitconfig
@@ -47,6 +47,7 @@
   csp   = set-parents
   ctr   = commit-tree
   ctrr  = commit-tree-reset
+  ctrs  = commit-tree-reset
   fua   = fixup-author
   om    = octomerge
   pp    = commit-push-parents
