graph: %ad/%cd, -n 10, --date=iso aliases

--- a/graph/.git-rc
+++ b/graph/.git-rc
@@ -9,11 +9,15 @@ alias ggala="g gala"
 alias ggg="g gg"
 alias ggp="g gp"
 alias ggr="g gr"
+alias ggr10="g gr10"
+alias ggrh="g grh"
 alias ggra="g gra"
+alias ggrac="g grac"
+alias ggracd="g gracd"
+alias ggrad="g grad"
 alias gggc="g ggc"
 alias ggrd="g grd"
 alias ggrdh="g grdh"
 alias ggrdn="g grdn"
-alias ggrh="g grh"
 alias ggrl="g grl"
 alias ggrn="g grn"
