--- a/graph/.gitconfig
+++ b/graph/.gitconfig
@@ -6,10 +6,14 @@
   gal = graph-all -l
   gala = graph-all -l -a
   gr = graph
+  gr10 = gr -n 10
+  grh = graph HEAD
   gra = graph -a
-  grd = graph --date=iso
-  grdh = grd -n 10
+  grac = graph -ac
+  gracd = graph -ac -d
+  grad = graph -a -d
+  grd = graph -d
+  grd10 = grd -n 10
   grdn = grd -n
-  grh = graph -n 10
   grl = graph -l
   grn = graph -n
