`dnoa = diff-name-only-all`

--- a/diff/.git-rc
+++ b/diff/.git-rc
@@ -24,6 +24,7 @@ alias gdh2="g dh2"
 alias gdj="g dj"
 alias gdn="g dn"
 alias gdno="g dno"
+alias gdnoa="g dnoa"
 alias gdcno="g dcno"
 alias gdnoc="g dnoc"
 alias gdns="g dns"
