--- a/diff/.gitconfig
+++ b/diff/.gitconfig
@@ -28,6 +28,7 @@
   dh2  = diff HEAD^2..HEAD
   dn   = diff --name-status
   dno  = diff --name-only
+  dnoa = diff-name-only-all
   dcno = diff --name-only --cached
   dnoc = diff --name-only --cached
   dns  = diff --name-status
