`gracl = graph -ac -l`

--- a/graph/.git-rc
+++ b/graph/.git-rc
@@ -14,6 +14,7 @@ alias ggrh="g grh"
 alias ggra="g gra"
 alias ggrac="g grac"
 alias ggracd="g gracd"
+alias ggracl="g gracl"
 alias ggrad="g grad"
 alias gggc="g ggc"
 alias ggrd="g grd"
