`rbu = rebase-undo`

--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -28,6 +28,7 @@ alias grbot="g rbot"
 alias grbp="g rbp"
 alias rbo="g rbo"
 alias grbs="g rbs"
+alias grbu="g rbu"
 alias grbud="g rbud"
 alias grud="g rud"
 
