improve push helpers

--- a/push/.git-rc
+++ b/push/.git-rc
@@ -8,11 +8,14 @@ alias gpfo="g pfo"
 alias gpft="g pft"
 alias gpfu="g pfu"
 alias gph="g ph"
+alias gpht="g pht"
+alias gphu="g phu"
 alias gpm="g pm"
 alias gpn="g pn"
 alias gpnt="g pnt"
 alias gpo="g po"
 alias gpt="g pt"
+alias gpto="g pto"
 alias gptn="g ptn"
 alias gpu="g pu"
 alias gpub="g pub"
