ls-tree helpers

--- a/ls/.git-rc
+++ b/ls/.git-rc
@@ -11,6 +11,9 @@ alias glthr="g lthr"
 alias glthn="g lthn"
 alias gltr="g ltr"
 alias gtr="g tr"
+alias gtrh="g trh"
+alias gtrp="g trp"
+alias gtrr="g trr"
 alias gltrn="g ltrn"
 alias glts="g lts"
 alias gltsh="g ltsh"
