--- a/ls/.gitconfig
+++ b/ls/.gitconfig
@@ -13,7 +13,10 @@
   lthr = ls-tree -r HEAD
   lthn = ls-tree -r --name-only HEAD
   ltr = ls-tree -r
-  tr = ls-tree -r
+  tr = ls-tree
+  trh = ls-tree HEAD
+  trp = ls-tree HEAD^
+  trr = ls-tree -r
   ltrn = ls-tree -r --name-only
   lts = ls-tree --abbrev
   ltsh = ls-tree --abbrev HEAD
