rebase-inline, rebase-stdin

--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -16,6 +16,7 @@ alias gpr="g pr"
 
 alias grb="g rb"
 alias grbd="g rbd"
+alias grbi="g rbi"
 alias grd="g rd"
 alias grba="g rba"
 alias grbc="g rbc"
@@ -28,6 +29,10 @@ alias grbot="g rbot"
 alias grbp="g rbp"
 alias rbo="g rbo"
 alias grbs="g rbs"
+alias grbsi="g rbsi"
+alias grbsin="g rbsin"
+alias grsi="g rsi"
+alias grsin="g rsin"
 alias grbu="g rbu"
 alias grbud="g rbud"
 alias grud="g rud"
