--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -51,7 +51,9 @@ alias garcn='g arcn'
 alias goc="g oc"
 alias goh="g oh"
 alias grhm="g rhm"
+alias gsho="g sho"
 alias gshoc="g shoc"
+alias gshon="g shon"
 alias gshmh="g shmh"
 alias gshoh="g shoh"
 alias gshrh="g shrh"
@@ -60,7 +62,9 @@ alias gsqsq="g sqsq"
 
 alias gtw="g tw"
 alias gtwa="g twa"
-alias gtwp="g twp"
 alias gtwap="g twap"
 alias gtwap2="g twap2"
 alias gtwap3="g twap3"
+alias gtwh="g twh"
+alias gtwhn="g twhn"
+alias gtwp="g twp"
